[package]
name = "paper_format_checker"
version = "1.0.0"
authors = ["blend-tea"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = [ "api-all"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
